# Fyrox-demo-projects

./: .gitignore  LICENSE  README.md
3d/: README.md
animation/: .gitignore  Cargo.toml  settings.ron
animation/data/: resources.registry  scene.rgs
animation/data/Sponza/: sponza.rgs
animation/data/Sponza/Materials/: arches.material  bricks.material  ceiling.material  column_a.material  column_b.material  column_c.material  curtain_blue.material  curtain_green.material  curtain_red.material  details.material  fabric_round_blue.material  fabric_round_green.material  fabric_round_red.material  flagpole.material  floor.material  ivy.material  lion_head.material  lion_shield.material  roof.material  vase_hanging.material  vase_hanging_chain.material  vase_octagonal.material  vase_round.material  vase_round_plants_b.material
animation/data/Sponza/Textures/Arches/: Arches_Height.tiff  Arches_Normal.tif
animation/data/Sponza/Textures/Ceiling/: Ceiling_AO.tiff
animation/data/Sponza/Textures/Column_B/: Column_B_Height.tif  Column_B_Roughness.tif
animation/data/Sponza/Textures/Fabrics/: Fabric_Curtain_Diffuse_Green.tif  Fabric_Curtain_Roughness.tif  Fabric_Round_Diffuse_Blue.tif  Fabric_Round_Diffuse_Green.tif  Fabric_Round_Roughness.tif
animation/data/Sponza/Textures/Flagpoles/: Flagpoles_Height.tiff  Flagpoles_Roughness.tif
animation/data/Sponza/Textures/Floor/: Floor_AO.tif  Floor_Roughness.tif  Floor_Smoothness.tif
animation/data/Sponza/Textures/Ivy/: Ivy_Diffuse_Normal.tiff
animation/data/Sponza/Textures/Lion_Head/: Lion_Head_Height.tiff
animation/data/Sponza/Textures/Lion_Shield/: Lion_Shield_AO.tif  Lion_Shield_Roughness.tif
animation/data/Sponza/Textures/Roof/: Roof_Height.tiff  Roof_Normal.tiff
animation/data/Sponza/Textures/Vase_Hanging/: Vase_Hanging_Normal.tif  Vase_Hanging_Roughness.tif
animation/data/Sponza/Textures/Vase_Hanging_Chain/: Vase_Hanging_Chain_Metallic.tif  Vase_Hanging_Chain_Roughness.tif
animation/data/Sponza/Textures/Vase_Octagonal/: Vase_Octagonal_Normal.tiff
animation/data/Sponza/Textures/Vase_Round/: Vase_Round_AO.tiff  Vase_Round_Normal.tiff
animation/data/Sponza/Textures/Vase_Round_Plants/: Vase_Round_Plants_AO.tiff
animation/editor/: Cargo.toml
animation/editor/src/: main.rs
animation/executor/: Cargo.toml
animation/executor-android/: Cargo.toml
animation/executor-android/src/: lib.rs
animation/executor-wasm/: Cargo.toml
animation/executor-wasm/src/: lib.rs
animation/executor/src/: main.rs
animation/game/: Cargo.toml
animation/game/src/: lib.rs  player.rs
blendshape/: Cargo.toml  settings.ron
blendshape/data/: scene.rgs
blendshape/editor/: Cargo.toml
blendshape/editor/src/: main.rs
blendshape/executor/: Cargo.toml
blendshape/executor-android/: Cargo.toml
blendshape/executor-android/src/: lib.rs
blendshape/executor-wasm/: Cargo.toml
blendshape/executor-wasm/src/: lib.rs
blendshape/executor/src/: main.rs
blendshape/game/: Cargo.toml
blendshape/game/src/: lib.rs
lightmap/: Cargo.toml  README.md  settings.ron
lightmap/data/: resources.registry
lightmap/data/Sponza/Materials/: bricks.material  ceiling.material  column_b.material  column_c.material  curtain_green.material  fabric_round_green.material  ivy.material  vase_octagonal.material
lightmap/data/Sponza/Textures/Arches/: Arches_Roughness.tif
lightmap/data/Sponza/Textures/Bricks/: Bricks_AO.tiff
lightmap/data/Sponza/Textures/Column_A/: Column_A_AO.tif
lightmap/data/Sponza/Textures/Column_B/: Column_B_Normal.tif  Column_B_Roughness.tif
lightmap/data/Sponza/Textures/Column_C/: Column_C_Normal.tiff  Column_C_Roughness.tif
lightmap/data/Sponza/Textures/Details/: Details_Normal.tiff  Details_Roughness.tif
lightmap/data/Sponza/Textures/Fabrics/: Fabric_Curtain_Diffuse_Blue.tif  Fabric_Curtain_Metallic.tif  Fabric_Curtain_Roughness.tif  Fabric_Round_Metallic.tif  Fabric_Round_Normal.tiff  Fabric_Round_Roughness.tif
lightmap/data/Sponza/Textures/Flagpoles/: Flagpoles_AO.tiff  (+1 more)
lightmap/editor/: Cargo.toml
lightmap/editor/src/: main.rs
lightmap/executor/: Cargo.toml
lightmap/executor-android/: Cargo.toml
lightmap/executor-android/src/: lib.rs
lightmap/executor-wasm/: Cargo.toml
lightmap/executor-wasm/src/: lib.rs
lightmap/executor/src/: main.rs
lightmap/game/: Cargo.toml
lightmap/game/src/: lib.rs
sound/: Cargo.toml  settings.ron
sound/data/: resources.registry  scene.rgs
sound/data/Sponza/: sponza.rgs
sound/data/Sponza/Materials/: curtain_blue.material  fabric_round_blue.material  flagpole.material  floor.material  roof.material  vase_round.material  vase_round_plants_b.material
sound/editor/: Cargo.toml
sound/editor/src/: main.rs
sound/executor/: Cargo.toml
sound/executor-android/: Cargo.toml
sound/executor-android/src/: lib.rs
sound/executor-wasm/: Cargo.toml  main.js
sound/executor-wasm/src/: lib.rs
sound/executor/src/: main.rs
sound/game/: Cargo.toml
sound/game/src/: camera_controller.rs  lib.rs
ui/: Cargo.toml  settings.ron
ui/data/: menu.ui  resources.registry  scene.rgs
ui/editor/: Cargo.toml
ui/editor/src/: main.rs
ui/executor/: Cargo.toml
ui/executor-android/: Cargo.toml
ui/executor-android/src/: lib.rs
ui/executor-wasm/: Cargo.toml
ui/executor-wasm/src/: lib.rs
ui/executor/src/: main.rs
ui/game/: Cargo.toml
ui/game/src/: custom.rs  lib.rs
(+124 files in other folders)
