[workspace]
members = ["editor", "executor", "executor-wasm", "executor-android", "game"]
resolver = "2"

[workspace.dependencies.fyrox]
git = "https://github.com/FyroxEngine/Fyrox"
rev = "e58a11847b37b11a79b7283af61dcd85ea9d2506"

[workspace.dependencies.fyroxed_base]
git = "https://github.com/FyroxEngine/Fyrox"
rev = "e58a11847b37b11a79b7283af61dcd85ea9d2506"

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
