[workspace]
members = ["editor", "executor", "executor-wasm", "executor-android", "game"]
resolver = "2"

[workspace.dependencies.fyrox]
path = "../../Fyrox/fyrox"
# git = "https://github.com/FyroxEngine/Fyrox"
# rev = "1e6515d1929a62bd5e1bf6dab96b481fac7efd88"

[workspace.dependencies.fyroxed_base]
path = "../../Fyrox/editor"
# git = "https://github.com/FyroxEngine/Fyrox"
# rev = "1e6515d1929a62bd5e1bf6dab96b481fac7efd88"

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
