[workspace]
members = ["editor", "executor", "executor-wasm", "executor-android", "game"]
resolver = "2"

[workspace.dependencies.fyrox]
version = "1.0.0-rc.1"

[workspace.dependencies.fyroxed_base]
version = "1.0.0-rc.1"

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
