[workspace]
members = ["editor", "executor", "executor-wasm", "executor-android", "game"]
resolver = "2"

[workspace.dependencies.fyrox]
git = "https://github.com/FyroxEngine/Fyrox"
rev = "7f19ad008e9ad9f73c8a77c82eae7aadd343a7c1"

[workspace.dependencies.fyroxed_base]
git = "https://github.com/FyroxEngine/Fyrox"
rev = "7f19ad008e9ad9f73c8a77c82eae7aadd343a7c1"

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
